Fix list item spacing

--- a/src/app/components/unarchive-overlay/unarchive-overlay.component.scss
+++ b/src/app/components/unarchive-overlay/unarchive-overlay.component.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  margin-bottom: 1rem;
   padding: 1rem;
   background-color: var(--gray-100);
   border-radius: 8px;
